client/src/style.css
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | | |  Main  | | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */

*{
    margin: 0;
    padding: 0
}
/* body {
    /* background-color: rgb(161, 159, 159); */

#container {
    position: relative;
    height: 100vh;
    width: 960px;
    margin: 0 auto;
    
}

#inner-container {
    height: 100%;
    width: 900px;
    margin: 0 auto;
}

#main-header {
    margin-bottom: 15px;
}

#chatContainer {
    position: absolute;
    height: 400px;
    width: 500px;
    top: 25%;
    left: 50%;
    border-radius: 50px;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%); 
    -ms-transform: translateX(-50%);
    transform: translateX(-50%); 
    background-color: tomato;
}

#alert-container {
    width: 350px;
    max-height: 100%;
    position: absolute;
    right: 30px;
    z-index: 2;
}

/* changes the color of the search dropdown active item on the friendspage */
.active.selected.item span.text {
    color: teal
}

/* gives color to the friends grid onclick*/
.ui.fluid.vertical.tabular.menu {
    border-color: #50b2ad !important;
}



/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | | |  LOGIN | | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */


#login-container {
    position: absolute;
    width: 500px;
    top: 25%;
    bottom: 25%;
    left: 25%;
    border-radius: 50px;
    background-color: rgba(0, 128, 128, 0.034);
}

#login-form {
    width: 300px;
    height: 100px;
    padding: 20px;
  
    position: absolute;
    top: 200px;
    left: 50%;

    -ms-transform: translateY(-50%);
    transform: translateY(-50%); 
  
    margin: -70px 0 0 -170px;
}
.login-buttons {
    margin-top: 30px;
}


.login-action-btn {
    position: absolute;
    right: 18px;
    background-color: #49868C;
}

#login-text {
    position: block;
    width: 250px;
    margin: 50px auto 0 auto;
    text-align: center;
}

#register-container {
    position: absolute;
    width: 500px;
    top: 25%;
    left: 25%;
    border-radius: 50px;
    background-color: rgba(0, 128, 128, 0.034);
}

#register-form {
    width: 350px;
    padding: 20px;
  
    position: absolute;
    /* top: 200px; */
    left: 50%;

    -ms-transform: translateX(-50%);
    transform: translateX(-50%); 
  
    /* margin: -100px 0 0 -170px; */
}

/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | |   NAVBAR   | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */

#navbar{
    margin-bottom: 30px;
    
}


/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | | |  HOME  | | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */

#home-container {
    height: 100%;
    width: 800px;
    margin: 0 auto;
}

#stats-container {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
}


/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | |   Friends  | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */

#friends-container {
    width: 98%;
    height: 90%;
    margin: 0 auto;
}

#friends-search-cont {
    display: flex;
    width: 700px;
    margin: 20px auto 0 auto;
    justify-content: center;
}

#friends-search-bar {
    width: 450px;
}

#friend-search-dropdown {
    margin-left: 20px;
    min-width: 110px !important;
} 

.search-result-container {
    display: flex;
    vertical-align: middle;
    height: 50px;
}

.search-result-img {
    max-width: 50px;
    max-height: 50px;
}

.search-result-username {

    width: 130px;
    max-width: 130px;
    height: 16px;
    margin-left: 30px;
    font-size: 16px;
    font-weight: bold;
    height: 50px;
    padding-top: 16px;
    border-right: 1px solid rgba(128, 128, 128, 0.205);
}

.search-result-name {
    width: 100%;
    height: 16px;
    margin-top: 17.5px;
    text-align: center;
    font-size: 16px;
}

#friends-list-container {
    max-width: 100%;
    width: 100%; 
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
}

#add-friend-btn-cont {
    margin-top: 15px;
    margin-right: 8px;
    width: 70px;
}

.add-friend-btn {
    padding-top: 40px;
    margin-top: 20px;
}

.add-friend-btn-icon {
    left: 50%
}
.friend-card-container {
    height: 155px;
    width: 200px;
    margin: 0 3px 0 3px;
}

#no-friends-div {
    margin: 0 auto;
}

#act-mod-form {
    margin: 15px auto -10px auto;
    width: 380px;
}

/* #act-mod-text-area {
    width: 380px;
} */

#act-mod-drop-down {
    display: block;
    margin: 0 auto 5px auto;
    width: 200px;
}


/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */
/* | | | | | | | | |   Messages | | | | | | | | | */
/* | | | | | | | | | | ~|~~|~ | | | | | | | | | | */

#messages-container {
    position: absolute;
    height: 70%;
    width: 90%;
    margin: 0 auto;
    border: 2px solid rgba(0, 128, 128, 0.075);
    border-radius: 10px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#message-box {
    padding: 10px;
    position: absolute;
    height: 100%;
    width: 70%;
    border-right: 2px solid rgba(0, 128, 128, 0.075);
}

#messages-header {
    width: 100%;
    height: 60px;
    background-color: rgba(0, 128, 128, 0.075);
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

#messages-header-text {
    position: absolute;
    line-height: 60px;
    display: inline-block;
    left: 50%;
    transform: translateX(-50%);
}

#messages-content {
    margin-left: 10px !important;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 70%;
    overflow-y: scroll;
}

#message-reply-form {
    bottom: 0px;
    height: 100%
}

#send-message-button {
    width: 100% !important;
}

.message-cont {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    margin-top: 15px;
}

.message-content {
    max-width: 600px;
    background-color: rgba(0, 128, 128, 0.075);
    padding: 10px;
    border-radius: 15px;
    min-height: 40px;
    margin-top: 10px;
    margin-left: 15px;
}

.message-img {
    width: 60px;
    height: 60px;
    border-radius: 60px;
}

#message-overview {
    position: absolute;
    width: 30%;
    height: 100%;
    right: 0;
}

#prev-msgs-header {
    height: 10%;
    width: 100%;
    
    right: 0;
}

#msgs-header-text {
    line-height: 100%;
    text-align: center;
    margin-top: 15px;
}

#messages-border-btm {
    border-bottom: 2px solid #00CCCC;
    width: 75%;
    margin:0 auto 0 auto;
}

#previous-messages-header {
    position: relative;
}

#message-cards-cont {
    overflow-y: scroll;
    height: 77%;
    margin-top: 1vh;
    /* background-color: blue; */
}

.message-card {
    margin-top: -1px;
    border-top: 1px solid rgba(0, 128, 128, 0.075);
    border-bottom: 1px solid rgba(0, 128, 128, 0.075);
    position: relative;
    height: 50px;
    padding-top: 2px;
}

.message-card:hover {
    background-color: rgba(0, 128, 128, 0.075);
    cursor: pointer;
}

.message-card-img {
    position: absolute;
    height: 44px;
    width: 44px;
    margin-left: 2px;
    background-color: red;
}

.message-card-text {
    position: absolute;
    text-align: center;
    width: 120px;
    height: 40px;
    left: 55px;
    line-height: 50px;
    margin-top: -2px;
}

.message-card-username {
    position: absolute;
    height: 20px;
    right: 6px;
    margin-top: 7px;
}

.message-card-date {
    font-size: 10px;
    position: absolute;
    right: 6px;
    bottom: 7px;
} 

#new-msg-btn-cont {
    border-radius: 2px;
    display: flex;
    align-items: center;
    top: 0;
    height: 13%;
    background-color: #00CCCC;
}

#new-msg-btn-cont:hover {
    background-color: #008080;
    cursor: pointer;
}

#new-msg-icon {
    position: absolute;
    margin: 0;
    left: 50px;
    margin-top: -1px;
}

#new-msg-text {
    margin: 0 auto
} 

#add-message-dropdown {
    max-width: 60%;
    margin: 20px auto 0 auto;
}

